[-] Fix headings alignement

--- a/source/stylesheets/_typography.scss
+++ b/source/stylesheets/_typography.scss
@@ -21,5 +21,6 @@ p {
 
   &.large {
     font-size: $size-l;
+    line-height: 1.7rem;
   }
 }
