--- a/source/stylesheets/index/_hero.scss
+++ b/source/stylesheets/index/_hero.scss
@@ -41,11 +41,7 @@
     .wrapper {
       grid-row-gap: 3rem;
       grid-template-columns: 1fr;
-      padding: 5rem 1rem 1rem;
-
-      .content {
-        text-align: center;
-      }
+      padding: 8rem 1rem 1rem;
 
       .image {
         svg {
